# hsimport-repro

./: Main.hs  new.cabal  shell.nix
